--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+    <title>Karthik Suresh</title>
+</head>
+<body>
+
+    <h2 style="font-family:avenir; text-align:left;" title = "Click on the images">
+    Karthik Suresh
+    </h2>
+
+    <p style="font-family:avenir;" title = "Click on the images">
+        Aspiring Engineer. Student at Cambridge.
+        <a href="http://cucc.net/"><img src="https://raw.githubusercontent.com/karthikuwc/karthikuwc.github.io/master/CUCC.png" alt="" width="30" height="20">
+        </a>
+    </p>
+
+    <p style="font-family:avenir" title = "Click on the images">
+        See some of the work I've done below: <br><br>
+        <a href="https://ksureshprojects.github.io/dublindatathon.html">This</a> is my team's 2nd place winning entry for the 2018 Dublin Datathon.<br>
+        <a href="https://ksureshprojects.github.io/3F7FTR.html/">This</a> is the analysis for a technical report on data compression algorithms in which I recieved a top grade.<br>
+        <a href="https://ksureshprojects.github.io/RandomForests.html/">This</a> exploration aims to evaluate and understand Random Forest regression.<br>
+        <a href="https://ksureshprojects.github.io/Clustering.html/">This</a> exploration aims to evaluate and understand certain methods of clustering.<br>
+        <a href="https://ksureshprojects.github.io/SVD.html/">This</a> notebook explores SVD as a means to reduce the dimensionality of a data set prior to the application of a machine learning method.<br>
+        <a href="https://ksureshprojects.github.io/PortfolioManager.html">This</a> is a python model I built to evaluate the performance and potential of a financial portfolio.<br><br>
+        Please click <a href="https://github.com/ksureshprojects/Projects">here</a> to access the main repository to see more information about the aforementioned work and other projects.
+        
+    <p>
+
+    <p style="font-family:avenir" title = "Click on the images"> 
+        Interested in a dynamic Software Development or Data Science role. Ready to start in the summer of 2020.
+    </p>
+
+    <br>
+
+    <p style="text-align:left; font-family:american typewriter;font-size:75%;"> 
+        karthik.uwc@gmail.com
+    </p>
+
+<p style="text-align:left; color: white;">
+    <a href="https://www.linkedin.com/in/karthik-suresh-43707573/">
+        <img src="https://raw.githubusercontent.com/karthikuwc/karthikuwc.github.io/master/linkedin.png" alt="" width="30" height="30">
+    </a>
+    <a href="https://raw.githubusercontent.com/ksureshprojects/ksureshprojects.github.io/master/CV.pdf">
+        <img src="https://raw.githubusercontent.com/ksureshprojects/ksureshprojects.github.io/master/logo.png" alt="" width="30" height="30">
+    </a>
+</p>
+<hr>
+
+</body>
+</html>
 
