--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <p style="font-family:avenir" title = "Click on the images">
         See some of the work I've done below: <br><br>
         <a href="https://ksureshprojects.github.io/dublindatathon.html">This</a> is my team's 2nd place winning entry for the 2018 Dublin Datathon.<br>
-        <a href="https://ksureshprojects.github.io/3F7FTR.html/">This</a> is the analysis for a technical report on data compression algorithms in which I recieved a top grade.<br>
-        <a href="https://ksureshprojects.github.io/RandomForests.html/">This</a> exploration aims to evaluate and understand Random Forest regression.<br>
-        <a href="https://ksureshprojects.github.io/Clustering.html/">This</a> exploration aims to evaluate and understand certain methods of clustering.<br>
-        <a href="https://ksureshprojects.github.io/SVD.html/">This</a> notebook explores SVD as a means to reduce the dimensionality of a data set prior to the application of a machine learning method.<br>
+        <a href="https://ksureshprojects.github.io/3F7FTR.html">This</a> is the analysis for a technical report on data compression algorithms in which I recieved a top grade.<br>
+        <a href="https://ksureshprojects.github.io/RandomForests.html">This</a> exploration aims to evaluate and understand Random Forest regression.<br>
+        <a href="https://ksureshprojects.github.io/Clustering.html">This</a> exploration aims to evaluate and understand certain methods of clustering.<br>
+        <a href="https://ksureshprojects.github.io/SVD.html">This</a> notebook explores SVD as a means to reduce the dimensionality of a data set prior to the application of a machine learning method.<br>
         <a href="https://ksureshprojects.github.io/PortfolioManager.html">This</a> is a python model I built to evaluate the performance and potential of a financial portfolio.<br><br>
         Please click <a href="https://github.com/ksureshprojects/Projects">here</a> to access the main repository to see more information about the aforementioned work and other projects.
         
