--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     </p>
 
 <p style="text-align:left; color: white;">
-    <a href="https://www.linkedin.com/in/karthik-suresh-43707573/">
+    <a style="text-decoration:none" href="https://www.linkedin.com/in/karthik-suresh-43707573/">
         <img src="https://raw.githubusercontent.com/karthikuwc/karthikuwc.github.io/master/linkedin.png" alt="" width="30" height="30">
     </a>
-    <a href="https://github.com/ksureshprojects/ksureshprojects.github.io/master/CV.pdf">
+    <!--<a href="https://github.com/ksureshprojects/ksureshprojects.github.io/blob/master/CV.pdf">
         <img src="https://raw.githubusercontent.com/ksureshprojects/ksureshprojects.github.io/master/logo.png" alt="" width="30" height="30">
-    </a>
+    </a>-->
 </p>
 <hr>
 
