--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <p style="font-family:avenir" title = "Click on the images">
         See some of the work I've done below: <br><br>
+        <a href="https://colab.research.google.com/drive/1fPCjfNMdN8-INpzND-UVIgyhCg-pcpzV">This</a> is a preliminary investigation for my <b>Master's Project</b>, exploring unsupervised learning methods to reorder gene expression time series.<br>
         <a href="https://ksureshprojects.github.io/RNN.html">This</a> is an exploration into creating RNN models for sequential data based on a lab from the MIT introduction to deep learning course.<br>
         <a href="https://ksureshprojects.github.io/dublindatathon.html">This</a> is my team's 2nd place winning entry for the 2018 Dublin Datathon.<br>
         <a href="https://ksureshprojects.github.io/3F7FTR.html">This</a> is the analysis for a technical report on data compression algorithms in which I recieved a top grade.<br>
@@ -30,7 +31,7 @@
     <p>
 
     <p style="font-family:avenir" title = "Click on the images"> 
-        Interested in a dynamic Software Development or Data Science role. Ready to start in the summer of 2020.
+        Interested in a dynamic Software Development or Analytics role. Ready to start in the summer of 2020.
     </p>
 
     <br>
