--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </h2>
 
     <p style="font-family:avenir;" title = "Click on the images">
-        Aspiring Engineer. Student at Cambridge.
+        Former Cambridge Engineering student. Software Developer in London.
         <a href="http://cucc.net/"><img src="https://raw.githubusercontent.com/karthikuwc/karthikuwc.github.io/master/CUCC.png" alt="" width="30" height="20">
         </a>
     </p>
@@ -31,7 +31,7 @@
     <p>
 
     <p style="font-family:avenir" title = "Click on the images"> 
-        Interested in a dynamic Software Development or Analytics role. Ready to start in the summer of 2020.
+        Interested in dynamic Software Development teams doing cool things.
     </p>
 
     <br>
